change update file method
